--- a/src/pages/Skills.css
+++ b/src/pages/Skills.css
@@ -33,3 +33,9 @@
 .framer , .mongodb{
     mix-blend-mode:multiply;
 }
+/* 
+.firebase {
+    width: 139px;
+    border-radius: 50%;
+    mix-blend-mode: multiply;
+} */
