Css for contact page

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
     font-family: "YouTube Noto", Roboto, Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    background-color: black;
+    background-color: #040303;
 }
 
 .nav--left ul {
